# task-tracker

./: .dockerignore  .env.example  .gitignore  .mcp.json  ANALYSIS_SYSTEM_ARCHITECTURE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_SUMMARY.md  AUDIT-COMPLETION-SUMMARY.md  BATCH_2_COMPLETED.md  BATCH_3_FINAL_REPORT.md  BATCH_3_README.md  BATCH_3_VALIDATION_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS_INDEX.md  CONTRAST_AUDIT_REPORT.md  DEAD_CODE_ANALYSIS_REPORT.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAINTENANCE.md  Dockerfile  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NEXT_SESSION_START.md  NEXT_SESSION_TODO.md  NOISE_FILTERING_ARCHITECTURE.md  NOISE_FILTERING_ARCHITECTURE_REVIEW.md  PACKAGE_COMPATIBILITY_2025.md  PLAN_OF_IMPLEMENTATION.md  PROGRESS.md  RAG_EXAMPLE_OUTPUT.md  README.md  README.uk.md  TECH_PLAN.md  TECH_PLAN.uk.md  TELEGRAM_SETUP.md  TESTING_SUMMARY.md  TOPICS_API_INTEGRATION_GUIDE.md  (+16 more)
.agent/rules/: gemini-claude.md  lang.md
.artifacts/: A11Y-AUDIT-CHECKLIST.txt  AGENT-3.1-SIDEBAR-NAVBAR-AUDIT-COMPLETE.md  ARCHITECTURAL-FLOW-CORRECTIONS-REPORT.md  AUDIT-QUICK-REFERENCE.md  AUDIT_COMPLETION_REPORT.md  AUDIT_SUMMARY.txt  BRAND_ANALYSIS_SUMMARY.txt  BRAND_BRIEF.md  BRAND_COLOR_PALETTE.md  BRAND_DECISIONS.md  BRAND_STRATEGY.md  BRAND_STYLE_ANALYSIS.md  COLOR_CONTRAST_FIX_REPORT.md  COORDINATOR-HANDOFF.md  DESIGN_SYSTEM_COMPLETION_REPORT.md  DESIGN_SYSTEM_UX_REVIEW.md  DESIGN_SYSTEM_VERIFICATION_REPORT.md  DESIGN_TOKENS_AUDIT.md  EMPTY_LOADING_ACTION_PLAN.md  EMPTY_LOADING_AUDIT_SUMMARY.txt  EMPTY_LOADING_PATTERNS_AUDIT.md  EMPTY_LOADING_QUICK_WINS.md  FINAL-REPORT-UX-REDESIGN.md  FINAL-VISUAL-POLISH-AUDIT.md  LETTER-SPACING-IMPLEMENTATION.md  PHASE-1-BRAND-STYLE-COMPLETE.md  README.md  RUN_E2E_TESTS.md  SIDEBAR-NAVBAR-AUDIT-INDEX.md  SIDEBAR-NAVBAR-AUDIT-SUMMARY.md  SIDEBAR-NAVBAR-FIX-IMPLEMENTATION.md  SIDEBAR-NAVBAR-LOGO-HARMONY-AUDIT.md  STORYBOOK-AUDIT-INDEX.md  STORYBOOK-AUDIT-QUICK-FIXES.md  STORYBOOK-AUDIT-SUMMARY.txt  STORYBOOK-IMPROVEMENT-PLAN.md  STORYBOOK-VISUAL-AUDIT.md  TABLES_AUDIT_QUICK_FIXES.md  TABLES_AUDIT_SUMMARY.txt  TABLES_DATA_DISPLAY_AUDIT_COMPLETE.md  (+44 more)
.artifacts/a11y-audit/: DETAILED-FINDINGS.md  QUICK-FIX-CHECKLIST.md  WCAG-2-1-AA-COMPLIANCE-AUDIT.md
.artifacts/agent-improvements/: react-frontend-architect-playwright-verification.md
.artifacts/app-redesign-adr-0001/: AUTO_TASK_CHAIN_DIAGNOSTIC.md  AUTO_TASK_CHAIN_FIX_COMPLETE.md  NEXT_ACTIONS.md  README.md  SEARCH_API_IMPLEMENTATION.md  ULTRATHINK-SIMPLIFICATION-REPORT.md  WEBSOCKET_UUID_FIX_REPORT.md  critical-path-analysis.md  design-artifacts-checklist.md  epic.md  feature-prioritization-matrix.md  features-to-cut.md  progress.md  quick-mvp-plan.md  simplified-roadmap.md  user-flows-analysis.md
.artifacts/ba/: 1. Введение.pptx  10. Риски и изменения требований (1).pptx  11. Основы UX.pptx  2. Стейкхолдеры.pptx  (+8 more)
.artifacts/ba-work/: user-journey-maps.md
.audit/: audit-summary.md  card-complexity.csv  card-inventory.csv  violations-detailed.md  wcag-violations.csv
.beads/: interactions.schema.json  issues.jsonl
.claude/: GIT_WORKFLOW.md  MIGRATION.md  delegation-patterns.md  handoff-2025-12-27-evening.md  handoff-2025-12-27.md  handoff-2025-12-28-concept-alignment.md  handoff-2025-12-28-v2.md  handoff-2025-12-28.md  handoff.md  ralph-loop.local.md
.husky/: README.md  pre-commit
.obsidian-docs/: .vault-config.json  README.md
.taskmaster/: config.json
.v01-production/: README.md  З_ЧОГО_ПОЧАТИ.md
backend/: CLAUDE.md  Dockerfile  TEST_ANALYSIS_RUN.md  TEST_REPORT.md  TYPE_SAFETY_STATUS_REPORT.md  test_hex_color_validation.py  test_metrics_websocket.py  test_topic_icons.py  test_transaction_isolation.py
contracts/: README.md  openapi.json
docs/: AGENT_TESTING_GUIDE.md  FEATURE_4_DOCUMENTATION_SUMMARY.md  GLOSSARY.md  TOPICS_SEARCH_PAGINATION_DOCS.md  index.md  mkdocs.yml  zettelkasten-context-spaces-architecture.md
docs-specs/: README.md  architecture-overview.md  backend-architecture.md  development-workflow.md  features.md  frontend-architecture.md  integrations.md  phase2-plan.md  regression-testing.md  system-architecture.md  tech-roadmap.md  testing-report.md  todo-list.md  user-guide.md  workflows.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .eslintignore  .eslintrc.cjs  AGENTS.md  CLAUDE.md  DOCKER_MODERNIZATION_PLAN.md  Dockerfile  FRONTEND_ASSESSMENT.md  HEALTHCHECK_FIX.md  PHASE4_DELIVERABLES.md  PHASE4_SUMMARY.txt  QUICK_START.md  README_PHASE4.md  TEST_REPORT.md  components.json  craco.config.js  eslint-local-rules.js  index.html  lighthouserc.js  nginx.conf  orval.config.ts  package-lock.json  package.json  playwright.config.ts  plopfile.mjs  tailwind.config.js  tsconfig.json  ui.md  vite.config.ts
nginx/: README.md  nginx.conf  nginx.conf.template
plans/: phase1_analysis_foundation_2025-10-10.md
scripts/: audit_translations.py  capture-screenshots.sh  capture-storybook-screenshots.js  capture_storybook_baseline.py  seed_db.py  seed_tasks.mjs  storybook-stories.txt  test_golden_set.py  validate-frontend-env.sh  workflow-preflight.sh
specs/: README.md
src/: __main__.py  agents.py  cli.py  cli.tcss  config.py  example_task.py  llm.py  main.py  schemas.py  taskiq_config.py  telegram.py  telegram_adapter.py  worker.py
tests/: llm_comprehensive_test.py  nats_direct_test.py  nats_test.py  ollama_integration_test.py  settings_test.py  taskiq_integration_test.py  taskiq_manual_test.py  test_base_classes.py  test_message_processor.py  test_ollama_provider.py  test_pydantic_ai.py  test_task_creator.py  test_taskiq_integration.py  test_taskiq_nats.py  test_telegram_adapter.py  test_telegram_settings_api.py  test_telegram_settings_crypto.py  test_telegram_settings_database.py  test_telegram_settings_integration.py  test_telegram_settings_webhook.py  test_telegram_settings_webhook_fixed.py
tokens/: tailwind.extend.js  tokens.css  tokens.json
(+3416 files in other folders)
