[project]
name = "task_tracker"
version = "0.1.0"
description = "Універсальна система автоматичного виявлення та класифікації проблем з різних комунікаційних каналів команд з гнучкими можливостями обробки та перенаправлення результатів."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic-postgresql-enum>=1.8.0",
    "alembic>=1.16.5",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.43",
    "pydantic-settings>=2.10.1",
    "taskiq>=0.11.18",
    "sqlmodel>=0.0.24",
    "taskiq-nats>=0.5.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "uvicorn>=0.35.0",
    "pydantic-ai>=1.0.10",
    "httpx>=0.28.1",
    "aiogram>=3.22.0",
    "cryptography>=45.0.0",
    "greenlet>=3.2.4",
    "telethon>=1.38.1",
    "email-validator>=2.2.0",
]


[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "aiosqlite>=0.19.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.2.0",
    "lunr[languages]>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "asyncio: mark test as asyncio",
]
pythonpath = ["backend"]
